# SpeedSwitchHub

./: .gitignore  GAutoSwitch.slnx  PROJECT.md  README.md  STEPS.md  ghub_data.json
src/GAutoSwitch.Core/Interfaces/: IAudioDeviceService.cs  IAudioProxyService.cs  IAudioSwitcher.cs  IAutoSwitchService.cs  IHeadsetStateService.cs  ISettingsService.cs  IStartupService.cs
src/GAutoSwitch.Core/Models/: AppSettings.cs  AudioDevice.cs
src/GAutoSwitch.Core/Services/: AutoSwitchService.cs  SettingsService.cs  StartupService.cs
src/GAutoSwitch.Hardware/: GAutoSwitch.Hardware.csproj  HeadsetStateService.cs  HidPlusPlus.cs  LogitechAudioProtocol.cs  NativeHid.cs
src/GAutoSwitch.Hardware/Audio/: AudioPolicyConfigInterop.cs  AudioProxyService.cs  AudioSessionManager.cs  AudioSwitcher.cs
src/GAutoSwitch.HidSandbox/: AudioEndpointChecker.cs  HeadsetDetector.cs  LogitechAudioProtocol.cs  NativeHid.cs  Program.cs
src/GAutoSwitch.UI/: App.xaml  App.xaml.cs  GAutoSwitch.UI.csproj  Imports.cs  Package.appxmanifest  app.manifest
src/GAutoSwitch.UI/Converters/: BoolToMicButtonTextConverter.cs  BoolToVisibilityConverter.cs  StringNotEmptyToBoolConverter.cs
src/GAutoSwitch.UI/Properties/: launchSettings.json
src/GAutoSwitch.UI/Services/: AudioDeviceService.cs  TrayIconService.cs  UpdateService.cs
src/GAutoSwitch.UI/ViewModels/: AudioProxyViewModel.cs  HeadsetStateViewModel.cs  SettingsViewModel.cs
src/audio-proxy/: Cargo.toml
src/audio-proxy/.cargo/: config.toml
src/audio-proxy/src/: audio_stream.rs  ipc.rs  main.rs  ring_buffer.rs
(+8 files in other folders)
