[package]
name = "audio-proxy"
version = "0.1.0"
edition = "2021"
description = "Low-latency audio proxy for games that don't support device switching"

[dependencies]
wasapi = "0.15"
ringbuf = "0.4"
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem"
]}
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
